Fix Top Header Spacing

--- a/public/theme/camera/css/global.css
+++ b/public/theme/camera/css/global.css
@@ -1858,3 +1858,7 @@ p {
   height: 100vh !important;
   overflow-y: auto !important;
 }
+
+.theme-top{
+  padding-top: 4rem !important;
+}
